--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
     "react": "17.0.2",
-    "react-native": "0.67.3"
+    "react-native": "0.67.3",
+    "react-native-axios": "^0.17.1",
+    "react-native-ionicons": "^4.6.5",
+    "react-native-safe-area-context": "^4.2.1",
+    "react-native-screens": "^3.13.1",
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.7",
