--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-axios": "^0.17.1",
+    "react-native-blur": "^3.2.2",
+    "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-ionicons": "^4.6.5",
     "react-native-pager-view": "^5.4.15",
@@ -25,6 +27,7 @@
     "react-native-safe-area-context": "^4.2.1",
     "react-native-screens": "^3.13.1",
     "react-native-tab-view": "^3.1.1",
+    "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
     "reselect": "^4.1.5"
