--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
+    "axios": "^0.26.1",
     "react": "17.0.2",
     "react-native": "0.67.3",
-    "react-native-axios": "^0.17.1",
     "react-native-blur": "^3.2.2",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.3.2",
